--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+selenium-stealth
+Pyrebase4
 FastAPI~=0.115.11
 uvicorn
 starlette~=0.46.0
@@ -5,3 +7,5 @@ selenium~=4.29.0
 webdriver_manager
 webdriver-manager~=4.0.2
 TwoCaptcha~=0.0.1
+firebase-admin
+setuptools
